WIP: Move render blocking JavaScript to bottom of page
By default JavaScript blocks DOM construction and thus delays
the time to first render

Moving this to the bottom of the page delays the JavaScript load but
will improve the render time.

OpenLibrary makes extensive use of inline scripts inside the page that
make use of $.ready. However, if jQuery is loaded at the bottom of the
page, then there will be no jQuery at time of execution.

Instead of running the jQuery function we push our function callbacks to
a ol.q which has is defined at the very top of the page. This provides an
array of callbacks to run on execution.

This global queue now gets initialised inside our Open library init
function.

--- a/openlibrary/macros/CoverImageWork.html
+++ b/openlibrary/macros/CoverImageWork.html
@@ -5,7 +5,7 @@ $ author_names = ', '.join(a.author.name for a in book.authors)
 $ title = book.title_prefix + " " + book.title
 
 <script type="text/javascript">
-\$().ready(bookCovers);
+ol.q.push(bookCovers);
 </script>
 
 <div class="coverMagic">
