--- a/openlibrary/macros/SearchResultsCovers.html
+++ b/openlibrary/macros/SearchResultsCovers.html
@@ -10,7 +10,7 @@ $code:
             return a.name
 
 <script type="text/javascript">
-\$().ready(bookCovers);
+ol.q.push(bookCovers);
 </script>
 
 $for b in results:
