--- a/openlibrary/macros/CoverImageAuthor.html
+++ b/openlibrary/macros/CoverImageAuthor.html
@@ -5,7 +5,7 @@ $ title = book.title
 $ olid = book.key.split("/")[2]
 
 <script type="text/javascript">
-\$().ready(bookCovers);
+ol.q.push(bookCovers);
 </script>
 
 <div class="author coverMagic">
