--- a/openlibrary/macros/EditButtonsMacros.html
+++ b/openlibrary/macros/EditButtonsMacros.html
@@ -1,8 +1,8 @@
 $def with (comment=None)
 
 <script type="text/javascript">
-\$().ready(Dialog);
-\$().ready(deleteVerify);
+ol.q.push(Dialog);
+ol.q.push(deleteVerify);
 </script>
 <div id="dialog" class="hidden" title="Really delete this macro?"><p>Are you sure you want to delete this?</p></div>
 
