--- a/openlibrary/macros/LoanForm.html
+++ b/openlibrary/macros/LoanForm.html
@@ -6,7 +6,7 @@ $if not available_loans:
 
 $else:
     <script type="text/javascript">
-    \$().ready(function(){
+    ol.q.push(function(){
         \$('#borrowbook label').click(function(){
             \$(this).find('input').attr('checked','checked');
             \$('.preSubmit').hide();
