--- a/openlibrary/macros/databarAuthor.html
+++ b/openlibrary/macros/databarAuthor.html
@@ -66,7 +66,7 @@ $if ctx.user:
             </div>
         </div>
         <script type="text/javascript">
-        \$().ready(function(){\$(".listClick").colorbox({inline: true, opacity: "0.5", href: "#addList"})});
+        ol.q.push(function(){\$(".listClick").colorbox({inline: true, opacity: "0.5", href: "#addList"})});
         </script>
 
 </div>
