--- a/openlibrary/macros/EditionImageWork.html
+++ b/openlibrary/macros/EditionImageWork.html
@@ -12,7 +12,7 @@ $ title = book.title_prefix + " " + book.title
 $ olid = book.key.split("/")[2]
 
 <script type="text/javascript">
-\$(window).load(editionCovers);
+window.q.push(editionCovers);
 </script>
 
 $if size == "M":
